    to mods-available/*conf (Closes: #338472)
  * Remove the NO_START kludge. Now you have to use rc*.d symlinks to disable
    apache2. (Closes: #408462, #275561)
  * Disable AddDefaultCharset again (Closes: #397886)
  * Make ports.conf, conf.d/charset, and /etc/default/apache2 conffiles
    managed by dpkg
  * Listen on port 443 by default if mod_ssl is loaded (Closes: #404598)

 -- Stefan Fritsch <sf@debian.org>  Tue, 03 Jul 2007 21:23:40 +0200

apache2 (2.2.4-1) unstable; urgency=medium

  [ Stefan Fritsch ]
  * Urgency medium for security fix
  * Fix CVE-2007-1863: DoS in mod_cache
  * New upstream version (Closes: #427050)
    - Fixes "proxy: error reading status line from remote server"
      (Closes: #410331)
  * Fix CVE-2007-1862: mod_mem_cache DoS (introduced in 2.2.4)
  * Change logrotate script to use reload instead of restart.
    (Closes: #298689)
  * chmod o-rx /var/log/apache2 (Closes: #291841)
  * chmod o-x suexec (Closes: #431048)
  * Update patch for truncated mod_cgi 500 responses from upstream SVN
    (Closes: #412580)
  * Don't use AddDefaultCharset for our docs (Closes: #414429)
  * fix options syntax in sites-available/default (Closes: #419539)
  * Move conf.d include to the end of apache2.conf (Closes: #305933)
  * Remove log, cache, and lock files on purge (Closes: #428887)
  * Ship /usr/lib/cgi-bin (Closes: #415698)
  * Add note to README.Debian how to read docs (Closes: #350822)
  * Document pid file name (Closes: #350286)
  * Update Standards-Version (no changes needed)
  * Fix some lintian warnings, add some overrides
  * Start apache when doing a "restart" even if it was not running
    (Closes: #384682)
  * reload config in apache2-doc postinst (Closes: #289289)
  * don't fail in prerm if apache is not running (Closes: #418536)
  * Suggest apache2-doc and www-browser (Closes: #399056)
  * Make init script always display a warning if NO_START=1 since
    VERBOSE=yes is not the default anymore (Closes: #430116)