@@ -1,4 +1,11 @@
 #!/bin/sh -e
+### BEGIN INIT INFO
+# Provides:          apache2
+# Required-Start:    $local_fs $remote_fs $network $syslog
+# Required-Stop:     $local_fs $remote_fs $network $syslog
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+### END INIT INFO
 #
 # apache2		This init.d script is used to start apache2.
 #			It basically just calls apache2ctl.
