@@ -8,6 +8,7 @@ apache2 (2.2.4-2) UNRELEASED; urgency=low
   * Make ports.conf, conf.d/charset, and /etc/default/apache2 conffiles
     managed by dpkg
   * Listen on port 443 by default if mod_ssl is loaded (Closes: #404598)
+  * Add init.d dependency info from insserv overrides to /etc/init.d/apache2
 
  -- Stefan Fritsch <sf@debian.org>  Tue, 03 Jul 2007 21:23:40 +0200
 
